# DEV_AI

./: README.md
browser-agent/src/: tools.py
coding-agent/: .gitignore  README.md  main.py  pyproject.toml
coding-agent/src/: agent.py  tools.py
coding-agent/workspace/: math_utils.py  test_math.py
email-agent/: .gitignore  README.md  main.py  pyproject.toml
email-agent/src/: actions.py  agent.py  gmail.py
mcp-project-manager/: .env.example  .gitignore  README.md  main.py  pyproject.toml
mcp-project-manager/src/: agent.py  config.py  mcp_client.py  scheduler.py  tasks.py  tools.py
multi-agent-pipeline/: .env.example  .gitignore  README.md  main.py  orchestrator.py  pyproject.toml
multi-agent-pipeline/examples/: sample_tasks.md
multi-agent-pipeline/tests/: test_integration.py  test_workers.py
multi-agent-pipeline/workers/: __init__.py  analyst.py  coder.py  research.py
web-search-agent/: .gitignore  README.md  pyproject.toml
web-search-agent/src/: agent.py  agent_loop.py  tool.py
